charts/tfy-logs/vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"labels":{"argocd.argoproj.io/instance":"truefoundry_truefoundry-frontend-app","truefoundry.com/application":"truefoundry-frontend-app","truefoundry.com/application-id":"cm1euofi323an01uac1v9hoh5","truefoundry.com/component":"truefoundry-frontend-app","truefoundry.com/component-type":"service","truefoundry.com/deployment-version":"4477","truefoundry.com/managed-by":"servicefoundry","truefoundry [...]
  creationTimestamp: "2024-12-18T14:43:03Z"
  generation: 10
  labels:
    argocd.argoproj.io/instance: truefoundry_truefoundry-frontend-app
    k8slens-edit-resource-version: v1alpha3
    truefoundry.com/application: truefoundry-frontend-app
    truefoundry.com/application-id: cm1euofi323an01uac1v9hoh5
    truefoundry.com/component: truefoundry-frontend-app
    truefoundry.com/component-type: service
    truefoundry.com/deployment-version: "4477"
    truefoundry.com/managed-by: servicefoundry
    truefoundry.com/tenant: internal
    truefoundry.com/workspace-id: cm1eu1sy4204r01q647jx80l0
  name: truefoundry-frontend-apphttp-5000-vs-alb
  namespace: truefoundry
  resourceVersion: "801320413"
  uid: 59e5ce8a-7978-45c3-a467-600cf50343dc
spec:
  gateways:
  - istio-system/tfy-wildcard-alb
  hosts:
  - alb.ml-usea1-ctl.devtest.truefoundry.tech
  http:
  - match:
    - uri:
        prefix: /flyteidl.service.AdminService/
    route:
    - destination:
        host: tfy-flyte-admin.truefoundry.svc.cluster.local
        port:
          number: 8089
  - match:
    - uri:
        prefix: /api/svc/socket.io
    rewrite:
      uri: /socket.io
    route:
    - destination:
        host: servicefoundry-server
        port:
          number: 3000
  - match:
    - uri:
        prefix: /api/agent/
    rewrite:
      uri: /
    route:
    - destination:
        host: tfy-llm-agent
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/manifest/
    rewrite:
      uri: /
    route:
    - destination:
        host: sfy-manifest-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/llm/
    rewrite:
      uri: /
    route:
    - destination:
        host: tfy-llm-gateway
        port:
          number: 8787
  - match:
    - uri:
        prefix: /api/proxy-server/
    rewrite:
      uri: /
    route:
    - destination:
        host: tfy-controller
        port:
          number: 8123
  - match:
    - uri:
        prefix: /api/s3proxy/
    rewrite:
      uri: /
    route:
    - destination:
        host: s3proxy
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/otel/
    rewrite:
      uri: /
    route:
    - destination:
        host: tfy-otel-collector
        port:
          number: 4318
  - route:
    - destination:
        host: truefoundry-frontend-app
        port:
          number: 5000
      weight: 100
